2005-01-30  Zoltan Varga  <vargaz@freemail.hu>

	* TestDriver.cs: Add --verbose flags.

	* graph.c ssa.c: Fix 64 bit warnings.
	
	* abcremoval.h ssapre.h abcremoval.c ssapre.c mini.c tramp-amd64.c 
	trace.c mini-exceptions.c linear-scan.c inssel-amd64.brg inssel.brg:
	Fix 64 bit warnings.

	* mini-amd64.c (mono_arch_output_basic_block): Fix uninitialized
	variable not spotted by gcc.
	
	* mini-amd64.c inssel-amd64.brg: Applied patch from  
	Willibald Krenn <Willibald.Krenn@gmx.at>. Clean up usage of 
	X86_COMPARE_MEMBASE opcodes.

	* exceptions-amd64.c (mono_arch_find_jit_info): Fix AMD64 build.

2005-01-29  Ben Maurer  <bmaurer@ximian.com>

	* *: MonoMethod->signature might be NULL now. You *MUST* use
        mono_method_signature.

2005-01-28  Zoltan Varga  <vargaz@freemail.hu>

	* driver.c (compile_all_methods_thread_main): Compile the methods
	without invoking cctors.

Fri Jan 28 18:28:26 CET 2005 Paolo Molaro <lupus@ximian.com>

	* mini.c: remove ben's "optimizations" to dup+stloc (bug #71905).
	* basic-calls.cs: test for the above.

2005-01-28  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c mini-exceptions.c aot.c exceptions-*.c: Update after 
	MonoJitInfo changes.

2005-01-27  Zoltan Varga  <vargaz@freemail.hu>

	* mini-exceptions.c (mono_handle_exception): Compute the stack trace
	eagerly if it contains dynamic methods.
	
	* mini-exceptions.c (ves_icall_System_Exception_get_trace): New icall.

	* mini-exceptions.c (mono_handle_exception): Avoid computing the stack
	trace, it is now computed by an icall from trace_ips.
	
	* mini-exceptions.c: Fix a warning.

Thu Jan 27 13:38:34 CET 2005 Paolo Molaro <lupus@ximian.com>

	* mini-exceptions.c: don't bother getting stack trace info if
	it's not going to be used.

2005-01-27  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (common_sources): Add ssapre-cee-ops.h and
	ssapre-mini-ops.h.

2005-01-26  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (remove_block_if_useless): Only print debug stuff with -v -v.
